<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFB935"
        android:backgroundTint="@color/Colorprimario"
        android:text="@string/resultados"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/economia"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poblaci_n"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/poblacion"
        android:text="40 Millones"
        android:layout_marginLeft="20sp"
        android:textSize="15dp"
        />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/economia"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pib"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pib"
        android:text="142 Billones"
        android:layout_marginLeft="20sp"
        android:textSize="15dp"
        />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/economia"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deuda_externa"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deuda"
        android:text="1 Billones"
        android:layout_marginLeft="20sp"
        android:textSize="15dp"
        />
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/economia"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/felicidad"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/felicidad"
        android:text="8/10"
        android:layout_marginLeft="20sp"
        android:textSize="15dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFB935"

        android:backgroundTint="@color/Colorprimario"
        android:text="@string/salir"
        android:textColor="#000000"
        android:textSize="30sp"
    />

</LinearLayout>